--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=5.4.2",
         "symfony/framework-bundle": ">=2.6|~3.0",
         "symfony/stopwatch": ">=2.6|~3.0",
-        "microsoft/application-insights": "~0.4"
+        "microsoft/application-insights": "~0.4",
+        "philkra/elastic-apm-php-agent": "^6.2"
     },
     "require-dev": {
         "phpmd/phpmd" : "@stable",
